chorer: correçoes e melhoria

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
       - .env
     restart: always
 
-
   web:
     build: ./chat
+    entrypoint: ./entrypoint.sh
     container_name: sentiment-api
     ports:
       - "8000:8000"
@@ -28,8 +28,6 @@ services:
       - .env
     restart: always
 
-
 volumes:
   postgres_data:
-
 
