--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,19 @@ alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
 black==25.1.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+coverage==7.6.12
+docker==7.1.0
 fastapi==0.115.8
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+iniconfig==2.0.0
 isort==6.0.0
 joblib==1.4.2
 Mako==1.3.9
@@ -17,20 +24,28 @@ nltk==3.9.1
 packaging==24.2
 pathspec==0.12.1
 platformdirs==4.3.6
+pluggy==1.5.0
 psutil==6.1.1
+psycopg==3.2.4
 psycopg2-binary==2.9.10
 pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
+pytest==8.3.4
+pytest-cov==6.0.0
 python-dotenv==1.0.1
 regex==2024.11.6
+requests==2.32.3
 shortuuid==1.0.13
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.45.3
 taskipy==1.14.1
+testcontainers==4.9.1
 textblob==0.19.0
 tomli==2.2.1
 tqdm==4.67.1
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.34.0
+wrapt==1.17.2
