--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,16 @@ colorama==0.4.6
 coverage==7.6.12
 docker==7.1.0
 fastapi==0.115.8
+filelock==3.17.0
+fsspec==2025.2.0
+gradio_client==1.7.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
+huggingface-hub==0.28.1
 idna==3.10
+imbalanced-learn==0.13.0
 iniconfig==2.0.0
 isort==6.0.0
 joblib==1.4.2
@@ -21,7 +26,9 @@ Mako==1.3.9
 MarkupSafe==3.0.2
 mypy-extensions==1.0.0
 nltk==3.9.1
+numpy==2.2.3
 packaging==24.2
+pandas==2.2.3
 pathspec==0.12.1
 platformdirs==4.3.6
 pluggy==1.5.0
@@ -33,19 +40,29 @@ pydantic-settings==2.7.1
 pydantic_core==2.27.2
 pytest==8.3.4
 pytest-cov==6.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.1
+PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.15.1
 shortuuid==1.0.13
+six==1.17.0
+sklearn-compat==0.1.3
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.45.3
 taskipy==1.14.1
 testcontainers==4.9.1
 textblob==0.19.0
+threadpoolctl==3.5.0
 tomli==2.2.1
 tqdm==4.67.1
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
 uvicorn==0.34.0
+websockets==14.2
 wrapt==1.17.2
