--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   web:
     build: .
-    entrypoint: ./entrypoint.sh
+    entrypoint: compile/entrypoint.sh
     container_name: sentiment-api
     ports:
       - "8000:8000"
